<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ViewHabitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_habit_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/numbers_color"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_habit_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_habit_question"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:text="@string/everyday"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_alarm"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignTop="@+id/tv_habit_interval"
                android:layout_alignBottom="@+id/tv_habit_interval"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/tv_habit_interval"
                android:contentDescription="@string/content_desc_alarm_icon"
                android:foregroundGravity="center_vertical"
                android:src="@drawable/alarm"
                app:tint="@color/purple_500" />

            <TextView
                android:id="@+id/tv_habit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tv_habit_interval"
                android:layout_alignBottom="@+id/tv_habit_interval"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/iv_alarm"
                android:gravity="center_vertical"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_habit_notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_habit_interval"
                android:layout_marginStart="8dp"
                android:padding="8dp"
                android:textSize="15sp"
                android:visibility="gone" />


            <View
                android:id="@+id/line0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/tv_habit_notes"
                android:background="@color/light_grey" />

            <LinearLayout
                android:id="@+id/stats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_below="@+id/line0"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_streak_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/tv_streak"
                        android:layout_alignEnd="@+id/tv_streak"
                        android:fontFamily="@font/font_ui"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@color/numbers_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_fire"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_streak_value"
                        android:layout_alignTop="@+id/tv_streak"
                        android:layout_alignBottom="@+id/tv_streak"
                        android:layout_toEndOf="@+id/tv_streak"
                        android:src="@drawable/flash"
                        app:tint="#ff4500" />

                    <TextView
                        android:id="@+id/tv_streak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_streak_value"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/font_ui"
                        android:padding="8dp"
                        android:text="@string/best_streak"
                        android:textSize="20sp" />


                </RelativeLayout>

              <View
                  android:layout_width="1dp"
                  android:background="@color/light_grey"
                  android:layout_height="match_parent"/>

                <RelativeLayout
                    android:layout_width="0dp"
                   android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_completion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_completion_value"
                        android:fontFamily="@font/font_ui"
                        android:padding="8dp"
                        android:text="@string/completion"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/tv_completion_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/tv_completion"
                        android:layout_alignEnd="@+id/tv_completion"
                        android:fontFamily="@font/font_ui"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@color/numbers_color"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/iv_like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_completion_value"
                        android:layout_toEndOf="@+id/tv_completion"
                        android:layout_alignTop="@+id/tv_completion"
                        android:layout_alignBottom="@+id/tv_completion"
                        android:src="@drawable/thumbs_up"
                        app:tint="#24A0ED" />


                </RelativeLayout>


            </LinearLayout>


            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/stats_layout"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/tv_best_streaks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:padding="8dp"
                android:text="@string/best_streaks" />


            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/chartView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/tv_best_streaks" />



            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/chartView"
                android:background="@color/light_grey" />

            <TextView
                android:id="@+id/tv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:padding="8dp"
                android:text="@string/calendar" />

            <CalendarView
                android:id="@+id/calendar_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_calendar" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/day_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/calendar_view"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:visibility="gone"
                app:cardBackgroundColor="#448AFF"
                app:cardCornerRadius="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv_habit_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/habit_action"
                        android:layout_alignBottom="@+id/habit_action"
                        android:layout_centerInParent="true"
                        android:gravity="center_vertical" />


                    <ImageView
                        android:id="@+id/habit_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="8dp" />


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>